--- a/NoSTORE/Views/User/Index.cshtml
+++ b/NoSTORE/Views/User/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["CSS"] = "profile.css";
 }
 
-<script src="~/js/profile.js"></script>
+<script type="module" src="~/js-new/pages/profile/index.js"></script>
 
 <section class="profile">
     <nav class="profile-menu">
