--- a/NoSTORE/wwwroot/css/layout.css
+++ b/NoSTORE/wwwroot/css/layout.css
@@ -38,12 +38,15 @@
 .modal .modal-content h2 {
   font-size: 2.5rem;
 }
-.modal .modal-content #auth-form {
+.modal .modal-content #description {
+  font-size: 1.3rem;
+}
+.modal .modal-content form {
   margin-top: 1rem;
   display: flex;
   flex-direction: column;
 }
-.modal .modal-content #auth-form button {
+.modal .modal-content form button {
   border: none;
   padding: 0.3rem;
   font-size: 2rem;
@@ -51,11 +54,7 @@
   color: #26262B;
   border-radius: 6px;
 }
-.modal .modal-content #auth-form div {
-  display: flex;
-  flex-direction: column;
-}
-.modal .modal-content #auth-form div input {
+.modal .modal-content form input {
   margin-bottom: 1rem;
   color: #E0E0E0;
   padding-left: 0.5rem;
@@ -67,56 +66,60 @@
   border-radius: 6px;
   font-size: 1.5rem;
 }
-.modal .modal-content #auth-form #register-section, .modal .modal-content #auth-form #code-section {
+.modal .modal-content form div {
+  display: flex;
+  flex-direction: column;
+}
+.modal .modal-content form #register-section, .modal .modal-content form #code-section {
   overflow: hidden;
   opacity: 0;
   max-height: 0px;
   transition: opacity 0.2s ease-out, max-height 1s ease-out;
 }
-.modal .modal-content #auth-form #register-section input, .modal .modal-content #auth-form #code-section input {
+.modal .modal-content form #register-section input, .modal .modal-content form #code-section input {
   transform: translateY(-20px);
   transition: transform 0.2s ease-out;
 }
-.modal .modal-content #auth-form #code-section {
+.modal .modal-content form #code-section {
   display: flex;
 }
-.modal .modal-content #auth-form #code-section input {
+.modal .modal-content form #code-section input {
   margin-bottom: 0rem;
 }
-.modal .modal-content #auth-form #code-section div {
+.modal .modal-content form #code-section div {
   margin-bottom: 1rem;
   display: flex;
   align-content: flex-start;
   justify-content: left;
 }
-.modal .modal-content #auth-form #code-section div button {
+.modal .modal-content form #code-section div button {
   display: flex;
   background: none;
   padding: 0;
   font-size: 1.2rem;
   color: #66A7C8;
 }
-.modal .modal-content #auth-form #register-section.active, .modal .modal-content #auth-form #code-section.active {
+.modal .modal-content form #register-section.active, .modal .modal-content form #code-section.active {
   max-height: 500px;
   opacity: 1;
 }
-.modal .modal-content #auth-form #register-section.active input, .modal .modal-content #auth-form #code-section.active input {
+.modal .modal-content form #register-section.active input, .modal .modal-content form #code-section.active input {
   transform: translateY(0);
 }
-.modal .modal-content #auth-form .support-buttons {
+.modal .modal-content form .support-buttons {
   margin-bottom: 0.5rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-.modal .modal-content #auth-form .support-buttons button {
+.modal .modal-content form .support-buttons button {
   background: none;
   padding: 0;
   font-size: 1.5rem;
   color: #66A7C8;
   transition: opacity 1s ease-out;
 }
-.modal .modal-content #auth-form .support-buttons button:disabled {
+.modal .modal-content form .support-buttons button:disabled {
   opacity: 0.5;
 }
 
