--- a/NoSTORE/wwwroot/scss/details_product.scss
+++ b/NoSTORE/wwwroot/scss/details_product.scss
@@ -1,9 +1,465 @@
 ﻿@use 'variables';
 
+.reviews {
+    @include variables.font();
+    background-color: variables.$block-color;
+    border-radius: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+
+    .ratings {
+        color: variables.$accent-color;
+        position: -webkit-sticky;
+        position: sticky;
+        align-self: flex-start;
+        top: 8rem;
+        z-index: 100;
+        width: 250px;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        .total-rating {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: variables.$bg-color;
+            padding: 0.4rem;
+            border-radius: 6px;
+            font-size: 2rem;
+
+            img {
+                width: 3rem;
+                height: 3rem;
+            }
+        }
+
+        .ratings-quantity {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            padding: 0.4rem;
+            background: variables.$bg-color;
+            border-radius: 6px;
+
+            .rating-info {
+                display: flex;
+                align-items: center;
+                font-size: 1.5rem;
+
+                img {
+                    width: 2.5rem;
+                    height: 2.5rem;
+                    margin-right: 5px;
+                }
+
+                .rating-cif {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 2rem;
+                }
+
+                .ratingb {
+                    color: variables.$bg-color;
+                    background-color: variables.$additional-color;
+                    flex: 1;
+                    display: flex;
+                    justify-content: center;
+                    align-content: center;
+                    border-radius: 6px;
+                    margin-left: 1rem;
+                }
+            }
+        }
+
+        .post-your-review {
+            display: flex;
+            flex-direction: column;
+            gap: 0.2rem;
+            color: variables.$text-color;
+
+            span:first-child {
+                font-size: 1.6rem;
+                color: variables.$additional-color;
+                margin-bottom: 0.1rem;
+            }
+
+            span {
+                font-size: 1.2rem;
+                margin-bottom: 0.5rem;
+            }
+
+            button {
+                padding: 0.4rem;
+                background: variables.$additional-color;
+                color: variables.$bg-color;
+                border: none;
+                border-radius: 6px;
+                font-size: 1.5rem;
+                transition: color 0.1s ease, background 0.1s ease;
+
+                &:hover {
+                    background: variables.$bg-color;
+                    color: variables.$accent-color;
+                }
+            }
+        }
+    }
+
+    .review_block {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        gap: 1rem;
+
+        .rb-topinfo {
+            &::after {
+                content: '';
+                display: block;
+                width: 100%;
+                height: 3px;
+                background-color: variables.$bg-color;
+                border-radius: 5px;
+                margin-top: 15px;
+                margin-bottom: 15px;
+            }
+
+            div {
+                display: flex;
+                justify-content: space-between;
+            }
+
+            .sorts {
+                display: flex;
+                position: relative;
+                gap: 5rem;
+                align-items: end;
+                color: variables.$additional-color;
+                font-size: 1.4rem;
+
+                .template__checkboxes {
+                    .hidden-checkbox {
+                        display: none;
+                    }
+
+                    .hidden-checkbox:checked + .checkbox-label::before {
+                        background-color: variables.$accent-color;
+                    }
+
+                    .checkbox-label {
+                        display: inline-flex;
+                        align-items: center;
+                        cursor: pointer;
+                        user-select: none;
+                        width: 100%;
+
+                        &::before {
+                            content: ' ';
+                            display: inline-block;
+                            width: 30px;
+                            height: 30px;
+                            border-radius: 4px;
+                            margin-right: 10px;
+                            background-color: variables.$bg-color;
+                            transition: 0.1s ease;
+                        }
+                    }
+                }
+
+                .sort_byrate {
+                    display: flex;
+                    flex-direction: column;
+                    font-size: 1.4rem;
+                    color: variables.$additional-color;
+
+                    button {
+                        background: variables.$bg-color;
+                        color: variables.$accent-color;
+                        padding: 0.2rem 1rem;
+                        border: none;
+                        border-radius: 5px;
+                        font-size: 1.4rem;
+                        width: 7rem;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+
+                        svg {
+                            width: 1.4rem;
+                            height: 1.4rem;
+
+                            path {
+                                fill: variables.$accent-color;
+                            }
+                        }
+                    }
+
+                    .dropdown-list {
+                        display: none;
+                        position: absolute;
+                        z-index: 1;
+                        list-style: none;
+                        background-color: variables.$bg-color;
+                        border-radius: 5px;
+                        padding: 0;
+                        width: 100%;
+                        -webkit-box-shadow: 0px 14px 20px 3px rgba(38, 38, 43, 0.78);
+                        -moz-box-shadow: 0px 14px 20px 3px rgba(38, 38, 43, 0.78);
+                        box-shadow: 0px 14px 20px 3px rgba(38, 38, 43, 0.78);
+
+                        li {
+                            display: flex;
+                            padding: 0.4rem 1rem;
+                            transition: color 0.1s ease, background-color 0.2s ease;
+
+                            &:hover {
+                                background-color: variables.$block-color;
+                                color: variables.$additional-color;
+                            }
+
+                            &.selected {
+                                background-color: variables.$block-color;
+                                color: variables.$accent-color;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .popular-review {
+            background: variables.$bg-color;
+            border-radius: 1rem;
+
+            h2 {
+                color: variables.$accent-color;
+            }
+
+            .r {
+                .placed-rating {
+                    background: variables.$block-color;
+                }
+
+                .middle-info {
+
+                    .like-block {
+
+                        .like-count {
+                            background-color: variables.$block-color;
+                        }
+
+                        button {
+                            &.active {
+                                background: variables.$block-color;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .r {
+            padding: 1rem;
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+            color: variables.$text-color;
+
+            .middle-info {
+                display: flex;
+                justify-content: space-between;
+
+                .like-block {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 1rem;
+
+                    .like-count {
+                        height: 100%;
+                        padding: 0 1rem;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border-radius: 6px;
+                        color: variables.$accent-color;
+                        font-size: 1.5rem;
+                        background-color: variables.$bg-color;
+                    }
+
+                    button {
+                        background: none;
+                        border: none;
+
+                        svg {
+                            width: 40px;
+                            height: 40px;
+
+                            path {
+                                stroke: variables.$accent-color;
+                                stroke-width: 1px;
+                                fill: transparent;
+                                transition: fill 0.2s ease;
+                            }
+                        }
+
+                        &:hover {
+                            svg {
+                                path {
+                                    fill: variables.$accent-color;
+                                }
+                            }
+                        }
+
+                        &.active {
+                            background: variables.$bg-color;
+                        }
+                    }
+                }
+            }
+
+            .placed-rating {
+                background: variables.$bg-color;
+                display: flex;
+                width: max-content;
+                gap: 0.5rem;
+                padding: 0.4rem;
+                border-radius: 6px;
+
+                svg {
+                    overflow: visible;
+                    width: 40px;
+                    height: 40px;
+
+                    path {
+                        stroke: variables.$accent-color;
+                        stroke-width: 1px;
+                    }
+                }
+
+                .active {
+                    path {
+                        fill: variables.$accent-color;
+                    }
+                }
+            }
+
+            .profile_and_report {
+                display: flex;
+                justify-content: space-between;
+
+                button {
+                    background: none;
+                    border: none;
+
+                    svg {
+                        width: 40px;
+                        height: 40px;
+
+                        path {
+                            stroke: variables.$accent-color;
+                            stroke-width: 2px;
+                            fill: none;
+                            transition: stroke 0.4s ease;
+                        }
+                    }
+
+                    &:hover {
+                        svg {
+                            path {
+                                stroke: variables.$bad-color;
+                            }
+                        }
+                    }
+                }
+
+                .profile {
+                    display: flex;
+                    gap: 1rem;
+                    justify-content: center;
+                    align-items: center;
+
+                    .avatar {
+                        width: 65px;
+                        height: 65px;
+                        border-radius: 100%;
+                        background-size: cover;
+                        background-position: center;
+                        background-repeat: no-repeat;
+                    }
+
+                    .profile-info {
+                        display: flex;
+                        flex-direction: column;
+                        font-size: 1.5rem;
+
+                        .date {
+                            font-size: 1.2rem;
+                            color: darken(variables.$text-color, 20%);
+                        }
+                    }
+                }
+            }
+
+            h3 {
+                font-size: 1.3rem;
+                color: variables.$additional-color;
+            }
+
+            span {
+                font-size: 1.3rem;
+            }
+
+            .usagetime span {
+                color: variables.$text-color;
+            }
+
+            .minuses {
+                h3 {
+                    color: variables.$bad-color;
+                }
+            }
+        }
+    }
+}
+
+#charts {
+    @include variables.font($size: 1rem);
+    color: variables.$text-color;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+
+    #chartsContent {
+        color: variables.$text-color;
+        background-color: variables.$block-color;
+        padding: 1rem;
+        border-radius: 8px;
+        position: relative;
+        transition: height 0.3s ease;
+        display: flex;
+        flex-direction: column;
+        width: 800px;
+        height: 400px;
+    }
+}
+
 .additonal__info {
     background-color: variables.$block-color;
     border-radius: 10px;
     padding: 1rem;
+    margin-bottom: 2rem;
+
 
     .top__info {
         display: flex;
@@ -236,6 +692,7 @@
 
         .main_image {
             width: 30rem;
+
             img {
                 height: 100%;
                 width: 30rem;
@@ -243,14 +700,17 @@
             }
         }
     }
+
     .mi {
         flex: 1;
     }
+
     .main__info {
         display: flex;
         justify-content: space-between;
         width: 100%;
         align-items: start;
+
         .titles {
             h1 {
                 @include variables.font($size: 2.3rem);
@@ -384,6 +844,40 @@
                         path {
                             stroke: variables.$accent-color;
                         }
+                    }
+                }
+            }
+
+            #cartBtn {
+                width: 230px;
+            }
+
+            #favBtn.active, #cartBtn.active {
+                background-color: variables.$bg-color;
+
+                span {
+                    color: variables.$accent-color;
+                }
+
+                svg {
+                    path {
+                        fill: variables.$accent-color;
+                        stroke: variables.$accent-color;
+                    }
+                }
+            }
+
+            #compBtn.active {
+                background-color: variables.$bg-color;
+
+                span {
+                    color: variables.$accent-color;
+                }
+
+
+                svg {
+                    path {
+                        stroke: variables.$accent-color;
                     }
                 }
             }
