ПОЖАЛУЙСТА СДЕЛАЙ АДМИНКУ УМОЛЯЮ

--- a/NoSTORE/Views/Cart/_CartPartial.cshtml
+++ b/NoSTORE/Views/Cart/_CartPartial.cshtml
@@ -120,8 +120,8 @@
             </svg>
             <span>Доставим в <span class="city">Астрахань</span> <span class="delivery-time">завтра</span></span>
         </div>
-        <button id="place-order">
+        <a id="place-order" href="/checkout" style="text-align: center">
             Перейти к оформлению
-        </button>
+        </a>
     </div>
 }
