--- a/NoSTORE/Views/Compare/Index.cshtml
+++ b/NoSTORE/Views/Compare/Index.cshtml
@@ -37,7 +37,7 @@
                 </button>
             }
         </div>
-        <div class="products">
+        <div class="products" id="products">
             @Html.Partial("_ComparePartial", Model.Compares.Values.FirstOrDefault());
         </div>
     </div>
