--- a/NoSTORE/wwwroot/scss/products.scss
+++ b/NoSTORE/wwwroot/scss/products.scss
@@ -174,6 +174,15 @@
                         @include variables.font($size: 1.2rem);
                         color: darken(variables.$text-color, 30%);
                         margin-bottom: 1.5rem;
+                        height: 90px;
+
+                        span {
+                            display: -webkit-box;
+                            -webkit-line-clamp: 3;
+                            -webkit-box-orient: vertical;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                        }
                     }
 
                     .product__info {
