--- a/NoSTORE/wwwroot/css/profile.css
+++ b/NoSTORE/wwwroot/css/profile.css
@@ -2,6 +2,73 @@
   font-family: "Strong";
   src: url(../Fonts/Strong-Regular.ttf) format("truetype");
 }
+.admin-table {
+  display: table;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.admin-table thead,
+.admin-table tbody {
+  display: table-header-group;
+}
+
+.admin-table tr {
+  display: table-row;
+}
+
+.admin-table th,
+.admin-table td {
+  display: table-cell;
+  padding: 1rem;
+  text-align: left;
+  border-bottom: 1px solid #26262B;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #66A7C8;
+}
+.admin-table th button,
+.admin-table td button {
+  padding: 0.2rem;
+  width: 6rem;
+  background: #26262B;
+  color: #3ABBD1;
+  font-size: 1.2rem;
+  border: none;
+  border-radius: 6px;
+}
+
+.admin-table th {
+  background-color: #26262B;
+  color: #3ABBD1;
+  font-size: 1.4rem;
+}
+
+.admin-topbar:after {
+  content: "";
+  display: block;
+  height: 3px;
+  background-color: #26262B;
+  border-radius: 5px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.admin-nav {
+  display: flex;
+  gap: 4rem;
+}
+.admin-nav a {
+  background-color: #26262B;
+  padding: 0.4rem;
+  border-radius: 6px;
+  color: #3ABBD1;
+  font-size: 1.5rem;
+  width: 180px;
+  text-align: center;
+}
+
 .orders {
   display: flex;
   flex-direction: column;
